--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "unity-mvc",
+  "name": "mvc-base",
   "version": "1.0.0",
-  "displayName": "unity-mvc",
+  "displayName": "mvc-base",
   "description": "MVC Base library.",
   "unity": "2019.1",
   "unityRelease": "0b5",
