--- a/unity-mvc.runtime.asmdef
+++ b/unity-mvc.runtime.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "unity-mvc.runtime",
+    "name": "mvc-base.runtime",
     "rootNamespace": "MVC",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f"
